app-sidebar init

--- a/apps/sv-web/package.json
+++ b/apps/sv-web/package.json
@@ -18,11 +18,13 @@
 		"@eslint/compat": "^1.4.0",
 		"@eslint/js": "^9.38.0",
 		"@hc/db": "*",
-		"@lucide/svelte": "^0.554.0",
+		"@internationalized/date": "^3.8.1",
+		"@lucide/svelte": "^0.544.0",
 		"@sveltejs/kit": "^2.47.1",
 		"@sveltejs/vite-plugin-svelte": "^6.2.1",
 		"@tailwindcss/vite": "^4.1.14",
 		"@types/node": "^22",
+		"bits-ui": "^2.11.0",
 		"clsx": "^2.1.1",
 		"eslint": "^9.38.0",
 		"eslint-config-prettier": "^10.1.8",
