--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -5,7 +5,7 @@
 	},
 	"scripts": {
 		"db:push": "drizzle-kit push",
-		"seed": "bun ./src/seed.ts",
+		"db:seed": "bun ./src/seed.ts",
 		"format": "prettier --write .",
 		"lint": "prettier --check ."
 	},
@@ -20,7 +20,9 @@
 		"typescript": "^5"
 	},
 	"dependencies": {
+		"@hc/channel-sync": "*",
 		"drizzle-orm": "^0.44.7",
-		"mysql2": "^3.15.3"
+		"mysql2": "^3.15.3",
+		"neverthrow": "^8.2.0"
 	}
 }
