--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -5,7 +5,8 @@
 	},
 	"scripts": {
 		"db:push": "drizzle-kit push",
-		"db:seed": "bun ./src/seed.ts",
+		"db:seed": "bun run ./src/seed.ts",
+		"db:wipe": "bun run ./src/wipe.ts",
 		"format": "prettier --write .",
 		"lint": "prettier --check ."
 	},
