--- a/apps/sv-web/package.json
+++ b/apps/sv-web/package.json
@@ -47,5 +47,8 @@
 		"typescript-eslint": "^8.46.1",
 		"vite": "^7.1.10",
 		"zod": "^4.1.12"
+	},
+	"dependencies": {
+		"@unpic/svelte": "^1.0.0"
 	}
 }
