--- a/apps/bun-worker/package.json
+++ b/apps/bun-worker/package.json
@@ -7,13 +7,17 @@
 		"dev": "bun --watch src/index.ts",
 		"build": "bun build src/index.ts --outdir dist --target bun",
 		"start": "bun run ./dist",
+		"check": "tsc --noEmit",
 		"format": "prettier --write .",
 		"lint": "prettier --check ."
 	},
 	"dependencies": {
 		"@hc/db": "*",
+		"@hc/channel-sync": "*",
+		"@effect/platform": "^0.93.3",
+		"@effect/platform-bun": "^0.84.0",
+		"effect": "^3.19.5",
 		"googleapis": "^164.1.0",
-		"neverthrow": "^8.2.0",
 		"zod": "^4.1.12"
 	},
 	"devDependencies": {
