--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -16,14 +16,12 @@
     "noImplicitOverride": true,
     "noUnusedLocals": false,
     "noUnusedParameters": false,
-    "noPropertyAccessFromIndexSignature": false
+    "noPropertyAccessFromIndexSignature": false,
+    "plugins": [
+      {
+        "name": "@effect/language-service"
+      }
+    ]
   },
-  "exclude": [
-    "node_modules",
-    "dist",
-    "build",
-    ".turbo",
-    "coverage"
-  ]
+  "exclude": ["node_modules", "dist", "build", ".turbo", "coverage"]
 }
-
