--- a/package.json
+++ b/package.json
@@ -23,12 +23,13 @@
   },
   "devDependencies": {
     "@effect/language-service": "^0.56.0",
+    "@types/bun": "^1.3.3",
     "dotenv-cli": "^11.0.0",
     "prettier": "^3.6.2",
     "turbo": "^2.6.1",
     "typescript": "^5.9.3"
   },
-  "packageManager": "bun@1.3.2",
+  "packageManager": "bun@1.3.3",
   "workspaces": [
     "apps/*",
     "packages/*"
