--- a/packages/channel-sync/package.json
+++ b/packages/channel-sync/package.json
@@ -7,7 +7,8 @@
 		"check": "tsc --noEmit",
 		"format": "prettier --write .",
 		"lint": "prettier --check .",
-		"backfill": "bun run scripts/backfill.ts"
+		"seed": "bun run scripts/seed.ts",
+		"wipe": "bun run scripts/wipe.ts"
 	},
 	"devDependencies": {
 		"@types/bun": "latest",
