--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "db:destroy": "docker compose down -v",
     "db:setup": "docker compose up -d && bun run scripts/wait-for-db.ts && bun run --filter @hc/db db:push",
     "db:push": "dotenv -- bun run --filter @hc/db db:push",
+    "db:seed": "dotenv -- bun run --cwd packages/channel-sync seed",
+    "db:wipe": "dotenv -- bun run --cwd packages/channel-sync wipe",
+    "db:backfill": "dotenv -- bun run --cwd packages/channel-sync backfill",
     "check": "turbo run check",
     "lint": "turbo run lint",
     "clean": "find . -type d \\( -name \"node_modules\" -o -name \"dist\" -o -name \"build\" -o -name \".turbo\" -o -name \".svelte-kit\" \\) -prune -exec rm -rf {} + 2>/dev/null || true",
