--- a/apps/sv-web/package.json
+++ b/apps/sv-web/package.json
@@ -15,6 +15,8 @@
 		"lint": "prettier --check ."
 	},
 	"devDependencies": {
+		"@effect/platform": "^0.93.6",
+		"@effect/platform-bun": "^0.86.0",
 		"@eslint/compat": "^1.4.0",
 		"@eslint/js": "^9.38.0",
 		"@hc/db": "*",
@@ -24,8 +26,10 @@
 		"@sveltejs/vite-plugin-svelte": "^6.2.1",
 		"@tailwindcss/vite": "^4.1.14",
 		"@types/node": "^22",
+		"@unpic/svelte": "^1.0.0",
 		"bits-ui": "^2.11.0",
 		"clsx": "^2.1.1",
+		"effect": "^3.19.8",
 		"eslint": "^9.38.0",
 		"eslint-config-prettier": "^10.1.8",
 		"eslint-plugin-svelte": "^3.12.4",
@@ -47,8 +51,5 @@
 		"typescript-eslint": "^8.46.1",
 		"vite": "^7.1.10",
 		"zod": "^4.1.12"
-	},
-	"dependencies": {
-		"@unpic/svelte": "^1.0.0"
 	}
 }
