--- a/apps/sv-web/package.json
+++ b/apps/sv-web/package.json
@@ -20,6 +20,7 @@
 		"@eslint/compat": "^1.4.0",
 		"@eslint/js": "^9.38.0",
 		"@hc/db": "*",
+		"@hc/channel-sync": "*",
 		"@internationalized/date": "^3.8.1",
 		"@lucide/svelte": "^0.544.0",
 		"@sveltejs/kit": "^2.47.1",
