--- a/packages/channel-sync/package.json
+++ b/packages/channel-sync/package.json
@@ -1,7 +1,8 @@
 {
 	"name": "@hc/channel-sync",
 	"exports": {
-		".": "./src/index.ts"
+		".": "./src/index.ts",
+		"./youtube/utils": "./src/youtube/utils.ts"
 	},
 	"scripts": {
 		"check": "tsc --noEmit",
