--- a/packages/channel-sync/package.json
+++ b/packages/channel-sync/package.json
@@ -8,9 +8,9 @@
 		"check": "tsc --noEmit",
 		"format": "prettier --write .",
 		"lint": "prettier --check .",
-		"seed": "bun run scripts/seed.ts",
-		"wipe": "bun run scripts/wipe.ts",
-		"backfill": "bun run scripts/backfill.ts"
+		"db:seed": "bun run scripts/seed.ts",
+		"db:wipe": "bun run scripts/wipe.ts",
+		"db:backfill": "bun run scripts/backfill.ts"
 	},
 	"devDependencies": {
 		"@types/bun": "latest",
