--- a/package.json
+++ b/package.json
@@ -11,13 +11,13 @@
     "db:setup": "docker compose up -d && bun run scripts/wait-for-db.ts && bun run --filter @hc/db db:push",
     "db:connect": "docker compose exec mysql mysql -uroot -proot hc",
     "db:push": "dotenv -- bun run --cwd packages/db db:push",
-    "db:seed": "dotenv -- bun run --cwd packages/channel-sync seed",
-    "db:wipe": "dotenv -- bun run --cwd packages/channel-sync wipe",
-    "db:backfill": "dotenv -- bun run --cwd packages/channel-sync backfill",
+    "db:seed": "dotenv -- bun run --cwd packages/channel-sync db:seed",
+    "db:wipe": "dotenv -- bun run --cwd packages/channel-sync db:wipe",
+    "db:backfill": "dotenv -- bun run --cwd packages/channel-sync db:backfill",
     "check": "turbo run check",
     "lint": "turbo run lint",
     "clean": "find . -type d \\( -name \"node_modules\" -o -name \"dist\" -o -name \"build\" -o -name \".turbo\" -o -name \".svelte-kit\" \\) -prune -exec rm -rf {} + 2>/dev/null || true",
-    "format": "prettier --write \"**/*.{ts,tsx,md}\"",
+    "format": "prettier --write \"**/*.{ts,js,svelte,json,md}\"",
     "check-types": "turbo run check-types",
     "build:web": "turbo run build --filter @hc/sv-web",
     "build:worker": "turbo run build --filter @hc/bun-worker",
