--- a/apps/sv-web/package.json
+++ b/apps/sv-web/package.json
@@ -25,6 +25,7 @@
 		"@lucide/svelte": "^0.544.0",
 		"@sveltejs/kit": "^2.47.1",
 		"@sveltejs/vite-plugin-svelte": "^6.2.1",
+		"@tailwindcss/typography": "^0.5.19",
 		"@tailwindcss/vite": "^4.1.14",
 		"@types/node": "^22",
 		"bits-ui": "^2.11.0",
@@ -34,6 +35,7 @@
 		"eslint-config-prettier": "^10.1.8",
 		"eslint-plugin-svelte": "^3.12.4",
 		"globals": "^16.4.0",
+		"mdsvex": "^0.12.6",
 		"mode-watcher": "^1.1.0",
 		"neverthrow": "^8.2.0",
 		"prettier": "^3.6.2",
