--- a/apps/sv-web/package.json
+++ b/apps/sv-web/package.json
@@ -23,6 +23,7 @@
 		"@hc/db": "*",
 		"@internationalized/date": "^3.8.1",
 		"@lucide/svelte": "^0.544.0",
+		"@sveltejs/enhanced-img": "^0.9.2",
 		"@sveltejs/kit": "^2.47.1",
 		"@sveltejs/vite-plugin-svelte": "^6.2.1",
 		"@tailwindcss/typography": "^0.5.19",
