--- a/apps/sv-web/package.json
+++ b/apps/sv-web/package.json
@@ -16,7 +16,7 @@
 	},
 	"devDependencies": {
 		"@effect/platform": "^0.93.6",
-		"@effect/platform-bun": "^0.86.0",
+		"@effect/platform-node": "^0.103.0",
 		"@eslint/compat": "^1.4.0",
 		"@eslint/js": "^9.38.0",
 		"@hc/channel-sync": "*",
