--- a/apps/sv-web/package.json
+++ b/apps/sv-web/package.json
@@ -15,8 +15,10 @@
 		"lint": "prettier --check ."
 	},
 	"devDependencies": {
+		"@effect/cluster": "^0.55.0",
 		"@effect/platform": "^0.93.6",
 		"@effect/platform-node": "^0.103.0",
+		"@effect/workflow": "^0.15.2",
 		"@eslint/compat": "^1.4.0",
 		"@eslint/js": "^9.38.0",
 		"@hc/channel-sync": "*",
