--- a/apps/sv-web/package.json
+++ b/apps/sv-web/package.json
@@ -7,7 +7,7 @@
 		"dev": "bunx --bun vite dev",
 		"build": "bunx --bun vite build",
 		"preview": "bunx --bun vite preview",
-		"start": "PORT=8080 node build",
+		"start": "PORT=8080 bun run ./build",
 		"prepare": "svelte-kit sync || echo ''",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
@@ -17,7 +17,7 @@
 	"devDependencies": {
 		"@effect/cluster": "^0.55.0",
 		"@effect/platform": "^0.93.6",
-		"@effect/platform-node": "^0.103.0",
+		"@effect/platform-bun": "^0.86.0",
 		"@effect/workflow": "^0.15.2",
 		"@eslint/compat": "^1.4.0",
 		"@eslint/js": "^9.38.0",
