--- a/docker/Dockerfile.web
+++ b/docker/Dockerfile.web
@@ -18,11 +18,10 @@ COPY --from=prune /app/out/full/ .
 COPY tsconfig.base.json .
 RUN bun run --filter @hc/sv-web build
 
-FROM node:22-slim AS runtime
+FROM oven/bun:slim AS runtime
 WORKDIR /app
 COPY --from=build /app/apps/sv-web/build ./build
-COPY --from=build /app/apps/sv-web/package.json ./package.json
 COPY --from=build /app/node_modules ./node_modules
 EXPOSE 8080
 ENV PORT=8080
-CMD ["node", "build"]
+CMD ["bun", "run", "build/index.js"]
