--- a/package.json
+++ b/package.json
@@ -3,12 +3,12 @@
   "private": true,
   "scripts": {
     "build": "turbo run build",
-    "dev": "docker compose up -d && dotenv -- turbo run dev",
+    "dev": "docker compose -f docker/docker-compose.yml up -d && dotenv -- turbo run dev",
     "dev:no-db": "dotenv -- turbo run dev",
-    "db:up": "docker compose up -d",
-    "db:down": "docker compose down",
-    "db:destroy": "docker compose down -v",
-    "db:setup": "docker compose up -d && bun run scripts/wait-for-db.ts && bun run --filter @hc/db db:push",
+    "db:up": "docker compose -f docker/docker-compose.yml up -d",
+    "db:down": "docker compose -f docker/docker-compose.yml down",
+    "db:destroy": "docker compose -f docker/docker-compose.yml down -v",
+    "db:setup": "docker compose -f docker/docker-compose.yml up -d && bun run scripts/wait-for-db.ts && bun run --filter @hc/db db:push",
     "db:connect": "docker compose exec mysql mysql -uroot -proot hc",
     "db:push": "dotenv -- bun run --cwd packages/db db:push",
     "db:seed": "dotenv -- bun run --cwd packages/channel-sync db:seed",
