--- a/apps/bun-worker/package.json
+++ b/apps/bun-worker/package.json
@@ -12,10 +12,12 @@
 		"lint": "prettier --check ."
 	},
 	"dependencies": {
-		"@hc/db": "*",
-		"@hc/channel-sync": "*",
+		"@effect/cluster": "^0.55.0",
 		"@effect/platform": "^0.93.3",
 		"@effect/platform-bun": "^0.84.0",
+		"@effect/workflow": "^0.15.2",
+		"@hc/channel-sync": "*",
+		"@hc/db": "*",
 		"effect": "^3.19.5",
 		"googleapis": "^164.1.0",
 		"zod": "^4.1.12"
