--- a/apps/sv-web/package.json
+++ b/apps/sv-web/package.json
@@ -44,7 +44,7 @@
 		"prettier-plugin-svelte": "^3.4.0",
 		"prettier-plugin-tailwindcss": "^0.7.1",
 		"runed": "^0.36.0",
-		"svelte": "^5.41.0",
+		"svelte": "5.45.8",
 		"svelte-adapter-bun": "^1.0.1",
 		"svelte-check": "^4.3.3",
 		"tailwind-merge": "^3.3.1",
