--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "db:destroy": "docker compose -f docker/docker-compose.yml down -v",
     "db:setup": "docker compose -f docker/docker-compose.yml up -d && bun run scripts/wait-for-db.ts && bun run --filter @hc/db db:push",
     "db:connect": "docker compose exec mysql mysql -uroot -proot hc",
+    "redis:connect": "docker exec -it hc-redis redis-cli",
     "db:push": "dotenv -- bun run --cwd packages/db db:push",
     "db:seed": "dotenv -- bun run --cwd packages/channel-sync db:seed",
     "db:wipe": "dotenv -- bun run --cwd packages/channel-sync db:wipe",
