--- a/docker/Dockerfile.worker
+++ b/docker/Dockerfile.worker
@@ -9,7 +9,7 @@ RUN turbo prune @hc/bun-worker --docker
 FROM base AS install
 WORKDIR /app
 COPY --from=prune /app/out/json/ .
-RUN bun install
+RUN bun install --frozen-lockfile
 
 FROM base AS build
 WORKDIR /app
