--- a/docker/Dockerfile.worker
+++ b/docker/Dockerfile.worker
@@ -16,6 +16,7 @@ FROM base AS build
 WORKDIR /app
 COPY --from=install /app/node_modules ./node_modules
 COPY --from=prune /app/out/full/ .
+RUN bun install --frozen-lockfile
 RUN bunx baml-cli generate --from ./packages/channel-sync/src/baml_src
 RUN bun build apps/bun-worker/src/index.ts --compile --minify --outfile /app/worker
 
