--- a/docker/Dockerfile.worker
+++ b/docker/Dockerfile.worker
@@ -21,6 +21,7 @@ RUN bunx baml-cli generate --from ./packages/channel-sync/src/baml_src
 RUN bun build apps/bun-worker/src/index.ts --compile --minify --outfile /app/worker
 
 FROM debian:stable-slim AS runtime
+ENV DEBIAN_FRONTEND=noninteractive
 RUN apt-get update && apt-get install -y --no-install-recommends ca-certificates && rm -rf /var/lib/apt/lists/*
 ENV NOTIFICATIONS_ENABLED=true
 COPY --from=build /app/worker /worker
