--- a/docker/Dockerfile.worker
+++ b/docker/Dockerfile.worker
@@ -9,7 +9,7 @@ RUN turbo prune @hc/bun-worker --docker
 FROM base AS install
 WORKDIR /app
 COPY --from=prune /app/out/json/ .
-COPY --from=prune /app/out/full/bun.lock ./bun.lock
+COPY --from=prune /app/bun.lock ./bun.lock
 RUN bun install --frozen-lockfile
 RUN ls -la >&2
 
