--- a/docker/Dockerfile.worker
+++ b/docker/Dockerfile.worker
@@ -9,9 +9,8 @@ RUN turbo prune @hc/bun-worker --docker
 FROM base AS install
 WORKDIR /app
 COPY --from=prune /app/out/json/ .
-COPY --from=prune /app/bun.lock ./bun.lock
+COPY --from=prune /app/out/bun.lock ./bun.lock
 RUN bun install --frozen-lockfile
-RUN ls -la >&2
 
 FROM base AS build
 WORKDIR /app
