--- a/docker/Dockerfile.web
+++ b/docker/Dockerfile.web
@@ -6,14 +6,11 @@ WORKDIR /app
 COPY . .
 RUN turbo prune @hc/sv-web --docker
 
-FROM base AS install
-WORKDIR /app
-COPY --from=prune /app/out/json/ .
-RUN bun install
-
 FROM base AS build
 WORKDIR /app
-COPY --from=install /app/node_modules ./node_modules
+COPY --from=prune /app/out/json/ .
+COPY --from=prune /app/bun.lock ./bun.lock
+RUN bun install
 COPY --from=prune /app/out/full/ .
 COPY tsconfig.base.json .
 RUN bun run --filter @hc/sv-web build
