--- a/docker/Dockerfile.worker
+++ b/docker/Dockerfile.worker
@@ -6,14 +6,11 @@ WORKDIR /app
 COPY . .
 RUN turbo prune @hc/bun-worker --docker
 
-FROM base AS install
-WORKDIR /app
-COPY --from=prune /app/out/json/ .
-RUN bun install
-
 FROM base AS build
 WORKDIR /app
-COPY --from=install /app/node_modules ./node_modules
+COPY --from=prune /app/out/json/ .
+COPY --from=prune /app/bun.lock ./bun.lock
+RUN bun install
 COPY --from=prune /app/out/full/ .
 RUN bun build apps/bun-worker/src/index.ts --compile --minify --outfile /app/worker
 
