--- a/packages/channel-sync/package.json
+++ b/packages/channel-sync/package.json
@@ -25,7 +25,7 @@
 		"@twurple/auth": "^8.0.2",
 		"effect": "^3.19.5",
 		"googleapis": "^164.1.0",
-		"sharp": "^0.34.5",
+		"jpeg-js": "^0.4.4",
 		"thumbhash": "^0.1.1",
 		"zod": "^4.1.12"
 	}
