--- a/packages/channel-sync/package.json
+++ b/packages/channel-sync/package.json
@@ -26,6 +26,7 @@
 		"effect": "^3.19.5",
 		"googleapis": "^164.1.0",
 		"jpeg-js": "^0.4.4",
+		"sharp": "^0.34.5",
 		"thumbhash": "^0.1.1",
 		"zod": "^4.1.12"
 	}
