--- a/docker/Dockerfile.worker
+++ b/docker/Dockerfile.worker
@@ -12,8 +12,9 @@ COPY --from=prune /app/out/json/ .
 COPY --from=prune /app/bun.lock ./bun.lock
 RUN bun install
 COPY --from=prune /app/out/full/ .
-RUN bun build apps/bun-worker/src/index.ts --compile --minify --outfile /app/worker
+COPY tsconfig.base.json .
 
-FROM debian:stable-slim AS runtime
-COPY --from=build /app/worker /worker
-CMD ["/worker"]
+FROM oven/bun:slim AS runtime
+WORKDIR /app
+COPY --from=build /app .
+CMD ["bun", "run", "apps/bun-worker/src/index.ts"]
