--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -5,6 +5,7 @@
 	},
 	"scripts": {
 		"db:push": "drizzle-kit push",
+		"db:migrate": "drizzle-kit migrate",
 		"check": "tsc --noEmit",
 		"format": "prettier --write .",
 		"lint": "prettier --check ."
