--- a/package.json
+++ b/package.json
@@ -3,13 +3,13 @@
   "private": true,
   "scripts": {
     "build": "turbo run build",
-    "dev": "docker compose -f docker/docker-compose.yml up -d && dotenv -- turbo run dev",
+    "dev": "db:up && dotenv -- turbo run dev",
     "dev:web": "dotenv -- bun run --cwd apps/sv-web dev",
     "dev:no-db": "dotenv -- turbo run dev",
     "db:up": "docker compose -f docker/docker-compose.yml up -d",
     "db:down": "docker compose -f docker/docker-compose.yml down",
-    "db:destroy": "docker compose -f docker/docker-compose.yml down -v",
-    "db:setup": "docker compose -f docker/docker-compose.yml up -d && bun run scripts/wait-for-db.ts && bun run --filter @hc/db db:push",
+    "db:destroy": "db:down -v",
+    "db:setup": "bun run scripts/wait-for-db.ts && bun run --filter @hc/db db:push",
     "db:connect": "docker compose -f docker/docker-compose.yml exec mysql mysql -uroot -proot hc",
     "redis:connect": "docker exec -it hc-redis redis-cli",
     "db:push": "dotenv -- bun run --cwd packages/db db:push",
