--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "scripts": {
     "build": "turbo run build",
-    "dev": "db:up && dotenv -- turbo run dev",
+    "dev": "bun run db:up && dotenv -- turbo run dev",
     "dev:web": "dotenv -- bun run --cwd apps/sv-web dev",
     "dev:no-db": "dotenv -- turbo run dev",
     "db:up": "docker compose -f docker/docker-compose.yml up -d",
